--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .orange {
-  color: #F70201;
+  color: #f70201;
 }
 
 .form-container {
@@ -30,8 +30,14 @@ body {
   margin: 30px;
   background-color: #000;
   padding: 30px;
-  border: 5px solid #F70201;
-  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
+  border: 5px solid #f70201;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 20px),
+    calc(100% - 20px) 100%,
+    0 100%
+  );
 }
 
 .heading {
@@ -42,7 +48,7 @@ body {
   margin-bottom: 20px;
   text-align: center;
   color: #fff;
-  text-shadow: 1px 3px 0px #F70201;
+  text-shadow: 1px 3px 0px #f70201;
 }
 
 .form-container .form .input {
@@ -59,7 +65,7 @@ body {
 }
 
 .form-container .form .input:focus {
-  border-left: 5px solid #F70201;
+  border-left: 5px solid #f70201;
 }
 
 .form-container .form .textarea {
@@ -78,7 +84,7 @@ body {
 }
 
 .form-container .form .textarea:focus {
-  border-left: 5px solid #F70201;
+  border-left: 5px solid #f70201;
 }
 
 .form-container .form .button-container {
@@ -88,7 +94,7 @@ body {
 
 .form-container .form .button-container .send-button {
   flex-basis: 70%;
-  background: #F70201;
+  background: #f70201;
   padding: 10px;
   color: #fff;
   text-align: center;
@@ -99,12 +105,12 @@ body {
 
 .form-container .form .button-container .send-button:hover {
   background: transparent;
-  border: 1px solid #F70201;
-  color: #F70201;
+  border: 1px solid #f70201;
+  color: #f70201;
 }
 
 .form-container .form .button-container .reset-button-container {
-  filter: drop-shadow(1px 1px 0px #F70201);
+  filter: drop-shadow(1px 1px 0px #f70201);
   flex-basis: 30%;
 }
 
@@ -112,27 +118,37 @@ body {
   position: relative;
   text-align: center;
   padding: 10px;
-  color: #F70201;
+  color: #f70201;
   font-weight: bold;
   background: #001925;
-  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%);
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 10px),
+    calc(100% - 10px) 100%,
+    0 100%
+  );
   transition: all 0.2s ease-in-out;
 }
 
-.form-container .form .button-container .reset-button-container .reset-button:hover {
-  background: #F70201;
+.form-container
+  .form
+  .button-container
+  .reset-button-container
+  .reset-button:hover {
+  background: #f70201;
   color: #001925;
 }
 label.data {
   color: #757575;
 }
-input[type="date"] {
+input[type='date'] {
   /* Cor de fundo */
   background-color: #002733;
   /* Cor do texto */
   color: #87a4b6;
   /* Adiciona uma borda */
-  border: 1px solid #F70201;
+  border: 1px solid #f70201;
   /* Adiciona um pouco de arredondamento às bordas */
   border-radius: 4px;
   /* Remove o estilo padrão do navegador */
@@ -142,15 +158,29 @@ input[type="date"] {
   padding-left: 10px;
   padding-right: 10px;
   margin-left: 10px;
-
 }
+.child-info {
+  display: flex;
+  gap: 10px;
+  margin-right: -20px;
+}
+.child-info .Ncrianca {
+  width: 100% !important;
+}
+.child-info .sexoCrianca {
+  width: 60% !important;
+}
+.child-info .idadeCrianca {
+  width: 40% !important;
+}
+
 @media (max-width: 600px) {
   .logoApp {
     margin-top: 0px;
     justify-content: space-between;
     align-items: center;
   }
-  .logoApp img{
+  .logoApp img {
     max-width: 180px;
   }
   .heading {
@@ -161,10 +191,8 @@ input[type="date"] {
     display: flex;
     align-items: start;
     gap: 5px;
-
   }
   label.saida {
     padding-left: 0px;
   }
-  
 }
